--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.1",
+    "@tanstack/react-query": "^5.20.5",
+    "cloudinary": "^2.0.3",
+    "formik": "^2.4.5",
+    "next": "^14.2.1",
+    "next-auth": "^4.24.5",
+    "next-cloudinary": "^6.3.0",
+    "prisma": "^5.9.1",
     "react": "^18",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-toastify": "^10.0.4",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
